@@ -11103,10 +11103,6 @@ name|value
 init|=
 literal|null
 decl_stmt|;
-name|long
-name|newval
-decl_stmt|;
-comment|// the new value.
 name|Store
 name|store
 init|=
@@ -11362,14 +11358,19 @@ name|column
 argument_list|)
 argument_list|)
 expr_stmt|;
-name|newval
+name|value
 operator|=
+name|Bytes
+operator|.
+name|toBytes
+argument_list|(
 name|amount
+argument_list|)
 expr_stmt|;
 block|}
 else|else
 block|{
-name|newval
+name|value
 operator|=
 name|incrementBytes
 argument_list|(
@@ -11396,12 +11397,7 @@ name|put
 argument_list|(
 name|column
 argument_list|,
-name|Bytes
-operator|.
-name|toBytes
-argument_list|(
-name|newval
-argument_list|)
+name|value
 argument_list|)
 expr_stmt|;
 name|batchUpdate
@@ -11414,7 +11410,12 @@ literal|true
 argument_list|)
 expr_stmt|;
 return|return
-name|newval
+name|Bytes
+operator|.
+name|toLong
+argument_list|(
+name|value
+argument_list|)
 return|;
 block|}
 finally|finally
@@ -11435,7 +11436,8 @@ expr_stmt|;
 block|}
 block|}
 specifier|private
-name|long
+name|byte
+index|[]
 name|incrementBytes
 parameter_list|(
 name|byte
@@ -11524,22 +11526,172 @@ name|length
 argument_list|)
 throw|;
 block|}
-name|long
-name|v
-init|=
-name|Bytes
-operator|.
-name|toLong
+return|return
+name|binaryIncrement
 argument_list|(
 name|value
+argument_list|,
+name|amount
+argument_list|)
+return|;
+block|}
+specifier|private
+name|byte
+index|[]
+name|binaryIncrement
+parameter_list|(
+name|byte
+index|[]
+name|value
+parameter_list|,
+name|long
+name|amount
+parameter_list|)
+block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|value
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+name|int
+name|cur
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|amount
+operator|>>
+operator|(
+literal|8
+operator|*
+name|i
+operator|)
+argument_list|)
+operator|%
+literal|256
+decl_stmt|;
+name|int
+name|val
+init|=
+call|(
+name|int
+call|)
+argument_list|(
+name|value
+index|[
+name|value
+operator|.
+name|length
+operator|-
+name|i
+operator|-
+literal|1
+index|]
+operator|&
+literal|0xff
 argument_list|)
 decl_stmt|;
-name|v
-operator|+=
+name|int
+name|total
+init|=
+name|cur
+operator|+
+name|val
+decl_stmt|;
+if|if
+condition|(
+name|total
+operator|>
+literal|255
+condition|)
+block|{
 name|amount
+operator|+=
+operator|(
+operator|(
+name|long
+operator|)
+literal|256
+operator|<<
+operator|(
+literal|8
+operator|*
+name|i
+operator|)
+operator|)
 expr_stmt|;
+name|total
+operator|%=
+literal|256
+expr_stmt|;
+block|}
+name|value
+index|[
+name|value
+operator|.
+name|length
+operator|-
+name|i
+operator|-
+literal|1
+index|]
+operator|=
+operator|(
+name|byte
+operator|)
+name|total
+expr_stmt|;
+name|amount
+operator|=
+operator|(
+name|amount
+operator|>>
+operator|(
+literal|8
+operator|*
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+operator|)
+operator|)
+operator|<<
+operator|(
+literal|8
+operator|*
+operator|(
+name|i
+operator|+
+literal|1
+operator|)
+operator|)
+expr_stmt|;
+if|if
+condition|(
+name|amount
+operator|==
+literal|0
+condition|)
 return|return
-name|v
+name|value
+return|;
+block|}
+return|return
+name|value
 return|;
 block|}
 block|}
